<?xml version="1.0"?>
<package format="3">
  <name>nurirobot_msgs</name>
  <version>0.1.0</version>
  <description>누리로봇 MC/RSA에 사용하는 메세지</description>
  <maintainer email="ckdo8008@gmail.com">Changu Do</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <depend>std_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
